--- a/AdvancedCombatSystem/Config/DefaultEngine.ini
+++ b/AdvancedCombatSystem/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=AdvancedCombatSystem
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/AdvancedCombatSystem/Maps/TestLevel.TestLevel
+GameDefaultMap=/Game/AdvancedCombatSystem/Maps/TestLevel.TestLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -23,4 +23,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/AdvancedCombatSystem")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/AdvancedCombatSystem")
+
+[/Script/Engine.RendererSettings]
+r.SupportSkyAtmosphereAffectsHeightFog=True
 
