--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,3 +28,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.SupportSkyAtmosphereAffectsHeightFog=True
 r.DefaultFeature.AutoExposure=False
 
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
+bRemoteExecution=True
+
